[gd_scene load_steps=17 format=3 uid="uid://bjrjps2akf3w2"]

[ext_resource type="Script" path="res://Scenes/enemies/Enemy.gd" id="1_iuwds"]
[ext_resource type="Texture2D" uid="uid://cuni7yv8mtpjw" path="res://Sprites/ui/empty_bar.png" id="2_6xp31"]
[ext_resource type="Texture2D" uid="uid://d2y6kkvtrttwx" path="res://Sprites/enemies/Zombie.png" id="2_mm60a"]
[ext_resource type="LabelSettings" uid="uid://ccugtg3ly1noj" path="res://Misc/CardLabelSettings.tres" id="3_22tp7"]
[ext_resource type="Texture2D" uid="uid://dnuaeetyyjit8" path="res://Sprites/ui/statusEffects/block.png" id="5_pxudm"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="6_bvov2"]
[ext_resource type="Texture2D" uid="uid://dyt0c8aywl7in" path="res://Sprites/ui/hit_particle.png" id="7_n7t8x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ac47"]
bg_color = Color(0.207843, 0.207843, 0.25098, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.568627, 0.552941, 0.552941, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qtu0t"]
font = ExtResource("6_bvov2")
font_size = 64
font_color = Color(0.662745, 0.286275, 0.286275, 1)
outline_size = 8
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5s5wb"]
font = ExtResource("6_bvov2")
font_size = 64
font_color = Color(0.309804, 0.392157, 0.721569, 1)
outline_size = 8
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[sub_resource type="Animation" id="Animation_qnc5y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/time")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/HitAmount:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/HitAmount:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/BlockAmount:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/BlockAmount:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1yf6e"]
resource_name = "attack_end"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.4, 1.4), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_53017"]
resource_name = "attack_rise"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.129154, 0.129154, 0.0]
}

[sub_resource type="Animation" id="Animation_fvjqp"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/HitAmount:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [135.0, -100.0, 135.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/HitAmount:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/HitAmount:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_xhvdt"]
resource_name = "hit_block"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BlockAmount:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [137.0, -100.0, 137.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BlockAmount:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/BlockAmount:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oafv5"]
_data = {
"RESET": SubResource("Animation_qnc5y"),
"attack_end": SubResource("Animation_1yf6e"),
"attack_rise": SubResource("Animation_53017"),
"hit": SubResource("Animation_fvjqp"),
"hit_block": SubResource("Animation_xhvdt")
}

[node name="Enemy" type="Node2D"]
z_index = 5
script = ExtResource("1_iuwds")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_mm60a")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -81.0
offset_top = -251.0
offset_right = 78.0
offset_bottom = 202.0

[node name="HealthBar" type="Sprite2D" parent="Control"]
position = Vector2(81, -4)
texture = ExtResource("2_6xp31")

[node name="HealthBarRect" type="ColorRect" parent="Control/HealthBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -14.0
offset_right = -67.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.662745, 0.286275, 0.286275, 1)

[node name="BlockBarRect" type="ColorRect" parent="Control/HealthBar"]
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.062
anchor_right = 0.977
anchor_bottom = 0.906
offset_left = 39.16
offset_top = -15.984
offset_right = -64.056
offset_bottom = -15.992
color = Color(0.309804, 0.392157, 0.721569, 1)

[node name="BlockIcon" type="Sprite2D" parent="Control/HealthBar"]
visible = false
position = Vector2(-88, 0.99999)
scale = Vector2(1.08854, 1.08854)
texture = ExtResource("5_pxudm")

[node name="Label" type="Label" parent="Control/HealthBar/BlockIcon"]
anchors_preset = -1
anchor_right = 1.031
anchor_bottom = 1.094
offset_left = -16.0
offset_top = -15.0
offset_right = -15.992
offset_bottom = -16.008
text = "3"
label_settings = ExtResource("3_22tp7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="Label" parent="Control/HealthBar"]
anchors_preset = -1
anchor_right = 0.977
anchor_bottom = 0.906
offset_left = -61.0
offset_top = -14.0
offset_right = -64.056
offset_bottom = -15.992
text = "10/10
"
label_settings = ExtResource("3_22tp7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="Sprite2D" parent="Control"]
position = Vector2(81, 32)
texture = ExtResource("2_6xp31")

[node name="StaminaBarRect" type="ColorRect" parent="Control/StaminaBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -13.0
offset_right = -67.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.333333, 0.490196, 0.333333, 1)

[node name="StaminaLabel" type="Label" parent="Control/StaminaBar"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.969
offset_left = -61.0
offset_top = -13.0
offset_right = -67.0
offset_bottom = -18.008
text = "3/3
"
label_settings = ExtResource("3_22tp7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoBox" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_left = -106.0
offset_top = 33.0
offset_right = -11.0
offset_bottom = 163.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ac47")

[node name="InfoPopup" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -94.0
offset_top = 41.0
offset_right = 10.0
offset_bottom = 379.0

[node name="StatusEffectContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = -57.0
offset_right = 337.0
offset_bottom = 13.0
scale = Vector2(0.5, 0.5)

[node name="HitAmount" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 34.0
offset_top = 135.0
offset_right = 74.0
offset_bottom = 199.0
text = "8"
label_settings = SubResource("LabelSettings_qtu0t")

[node name="BlockAmount" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 83.0
offset_top = 137.0
offset_right = 123.0
offset_bottom = 201.0
text = "8"
label_settings = SubResource("LabelSettings_5s5wb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oafv5")
}

[node name="HitParticles" type="CPUParticles2D" parent="."]
scale = Vector2(0.5, 0.5)
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
speed_scale = 2.52
explosiveness = 0.55
texture = ExtResource("7_n7t8x")
emission_shape = 3
emission_rect_extents = Vector2(3, 3)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 166.67
initial_velocity_max = 516.57
scale_amount_min = 0.0
scale_amount_max = 0.5
color = Color(0.792157, 0.34902, 0.329412, 1)

[connection signal="gui_input" from="Control" to="." method="_on_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_hover"]
[connection signal="mouse_exited" from="Control" to="." method="_on_hover_end"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
